# IngeniaBridge

./: .gitignore
arm_trajectory_fanout/: package.xml.bak_setupcfg_20260509_202517  setup.cfg  setup.py
arm_trajectory_fanout/arm_trajectory_fanout/: arm_trajectory_fanout.py  arm_trajectory_fanout.py.bak_clients_20260509_202651
arm_trajectory_fanout/config/: arm_trajectory_fanout.yaml
arm_trajectory_fanout/launch/: fanout.launch.py
ingenia_bridge/: README.md  package.xml  setup.cfg  setup.py
ingenia_bridge/config/: ingenia_j0.yaml  ingenia_j0.yaml.bak_collapse_fjt_20260509_223834  ingenia_j0.yaml.bak_prismatic_units_20260509_210158  ingenia_j0.yaml.bak_split_block_only_20260509_230204  ingenia_j0.yaml.bak_split_long_collapsed_fjt_20260509_225253  ingenia_j0.yaml.bak_timeout_budget_20260509_214410
ingenia_bridge/ingenia_bridge/: cia402.py  cia402.py.bak_20260509_195224  ingenia_ipm.py  ingenia_joint_bridge.py  ingenia_joint_bridge.py.bak_20260509_195224  ingenia_joint_bridge.py.bak_action_alias_20260509_200128  ingenia_joint_bridge.py.bak_cancel_stop_20260509_212852  ingenia_joint_bridge.py.bak_collapse_fjt_20260509_223834  ingenia_joint_bridge.py.bak_fanout_20260509_202127  ingenia_joint_bridge.py.bak_prismatic_dataclass_20260509_210530  ingenia_joint_bridge.py.bak_prismatic_units_20260509_210158  ingenia_joint_bridge.py.bak_split_interior_velocities_20260509_230741  ingenia_joint_bridge.py.bak_split_long_collapsed_fjt_20260509_225253  ingenia_joint_bridge.py.bak_split_long_collapsed_fjt_20260509_225815  ingenia_joint_bridge.py.bak_timeout_budget_20260509_214410  raw_socket_can.py
ingenia_bridge/launch/: ingenia_j0_bridge.launch.py
ingenia_bridge/scripts/: apply_ingenia_pdo_remap_one.sh
ingenia_bringup/: CMakeLists.txt  package.xml
ingenia_bringup/config/j0/: bus.yml  evs-xcr-c_2.10.0.eds
ingenia_bringup/launch/: ingenia_canopen_driver.launch.py  ingenia_full.launch.py
