<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ingenia_bringup</name>
  <version>0.0.1</version>
  <description>CANopen master + ProxyDriver bringup for Ingenia EVS-XCR-C at node 10, configured to match the ingenia_bridge PDO layout.</description>
  <maintainer email="bostonuniversityrobotics@gmail.com">robotics-club</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>lely_core_libraries</depend>

  <exec_depend>canopen_core</exec_depend>
  <exec_depend>canopen_master_driver</exec_depend>
  <exec_depend>canopen_proxy_driver</exec_depend>
  <exec_depend>ingenia_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
